Fix search icon alignment in RTL

--- a/assets/base.css
+++ b/assets/base.css
@@ -1844,7 +1844,7 @@ details[open] > .share-button__fallback {
   overflow: hidden;
   padding: 0;
   position: absolute;
-  right: 0;
+  inset-inline-end: 0;
   top: 0;
   width: 4.4rem;
 }
