--- a/assets/component-search.css
+++ b/assets/component-search.css
@@ -3,7 +3,7 @@
 }
 
 .search__button {
-  right: var(--inputs-border-width);
+  inset-inline-end: var(--inputs-border-width);
   top: var(--inputs-border-width);
 }
 
@@ -18,7 +18,7 @@
   height: calc(100% - 1.6rem);
   content: '';
   position: absolute;
-  right: 0;
+  inset-inline-end: 0;
 }
 
 .reset__button:not(:focus)::after {
@@ -27,7 +27,7 @@
   height: calc(100% - 1.8rem);
   content: '';
   position: absolute;
-  right: 0;
+  inset-inline-end: 0;
 }
 
 .search__button:focus-visible,
